2021-07-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiags/tests/struct.c: add test for bug #3086

2021-07-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-3141.c: reenable for mcs51
	* src/SDCCsymt.c (promoteAnonStructs): fix bug #3086

2021-07-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCdwarf2.c (dwWriteFrames): fix bug #3161

2021-07-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCdwarf2.h: fix incorrect DW_CFA_nop value
	* src/SDCCdwarf2.c (dwWriteTags): fix problem with excess
	  end-of-sibling-chain markers at end of compilation unit
	* src/SDCCdwarf2.c (dwWriteAbbrevs): write abbreviations in
	  numerical order rather than hash table order
	* src/SDCCdwarf2.c (dwGenCFIins,dwWriteFDE): keep start of
	  CIE and FDE entries 32-bit aligned

2021-07-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #3262.

2021-07-05 Visenri
    * src/pic14/glue.c
      src/pic16/glue.c
      src/SDCCast.c
      src/SDCCast.h
      src/SDCCglue.c
      src/SDCCicode.c
      src/SDCCval.c
      src/SDCCval.h
      Implemented partial support for conditional type reduction (patch #392), for now only used by SIZEOF.
      OR - XOR type reduction optimization (patch #392).
    * support/regression/fwk/include/testfwk.h
      support/regression/tests/sizeof.c
      Removed empty definition of __data for pdk from testfwk.h.
      Added tests for SIZEOF operator.
      
2021-07-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClospre.hpp: fix bug #3166
	* support/regression/tests/bug-3166.c: enable test

2021-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  genMove_o improvements.

2021-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Function pointer call for --reserve-regs-iy when hl and bc are in use for register arguments.

2021-06-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
